--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Julia Diggs</title>
-    <link rel="stylesheet" href="index.css"> <!-- remember to change for the actual stylesheet-->
+    <link rel="stylesheet" href="styles.css"> <!-- remember to change for the actual stylesheet-->
 </head>
 <body>
 <!--Header section-->
@@ -13,22 +13,20 @@
         graduating the College in the Spring with a degree in Computing in the Arts(BA) with a
         concentration in Digital Media, and a minor in Studio Art. I'm interested in Graphic Design
         and Animation Design.</p>
-    </header>
+
 <!--Nav Section-->
     <div class="nav">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="aboutme.html">About Me</a></li>
-                <li><a href="series.html">Series</a></li>
-                <li><a href="standalone.html">Stand Alone</a></li>
-                <li><a href="authors.html">Authors</a></li>
-                <li><a href="reviews.html">Reviews</a></li>
+                <li><a href="csci215.html">CSCI 215: Web Programming</a></li>
+                <li><a href="csci220.html">CSCI 220: Computer Programming 1</a></li>
+                <li><a href="csci221.html">CSCI 221: Computer Programming 2</a></li>
             </ul>
         </nav>
 
     </div>
-
+    </header>
 <!--Section???-->
 <section>
     <p>At the College of Charleston, I'm a CITA major</p>
