--- a/csci215/csci215.html
+++ b/csci215/csci215.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>CSCI 215</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Web Programming</h1>
-    <br>
+<!--NAV BAR-->
+<div class="nav">
+    <a class="button button-primary" href="#">Home</a>
+    <a class="button" href="csci215/csci215.html">CSCI 215: Web Programming</a>
+    <a class="button" href="csci220/csci220.html">CSCI 220: Computer Programming 1</a>
+    <a class="button" href="csci221/csci221.html">CSCI 221: Computer Programming 2</a>
+</div>
+
+    <header>
+        <h1>Web Programming</h1>
+    </header>
 <!--    <p>In this class, we are taking the skills that we learned in CSCI 115: Web Design to enhance our
     abilies and skills with working in HTML and CSS. Unlike in Web Design, the focus of this class is
     to learn Javascript.</p>-->
