--- a/csci220/csci220.html
+++ b/csci220/csci220.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>CSCI 220</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<!--NAV BAR-->
+<div class="nav">
+    <a class="button button-primary" href="#">Home</a>
+    <a class="button" href="csci215/csci215.html">CSCI 215: Web Programming</a>
+    <a class="button" href="csci220/csci220.html">CSCI 220: Computer Programming 1</a>
+    <a class="button" href="csci221/csci221.html">CSCI 221: Computer Programming 2</a>
+</div>
+
     <header>
         <h1>Computer Programming 1</h1>
     </header>
-    <br>
+
 <!--    <p>In this class, we learned the basics in coding with the beginner language of Python.
     Throughout the class, we had to turn in various assignments to show our learned knowledge
     from this class.</p>-->
