--- a/csci221/csci221.html
+++ b/csci221/csci221.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>CSCI 220</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Computer Programming 2</h1>
+<!--NAV BAR-->
+<div class="nav">
+    <a class="button button-primary" href="#">Home</a>
+    <a class="button" href="csci215/csci215.html">CSCI 215: Web Programming</a>
+    <a class="button" href="csci220/csci220.html">CSCI 220: Computer Programming 1</a>
+    <a class="button" href="csci221/csci221.html">CSCI 221: Computer Programming 2</a>
+</div>
+
+    <header>
+        <h1>Computer Programming 2</h1>
+    </header>
 
     <p>This course further develops object-oriented programming introduced in CSCI 220. Topics include file input/output,
         inheritance and polymorphism, exceptions, error handling and algorithm analysis. Lectures three hours per week.</p>
