--- a/index.html
+++ b/index.html
@@ -2,51 +2,61 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Julia Diggs</title>
-    <link rel="stylesheet" href="styles.css"> <!-- remember to change for the actual stylesheet-->
+    <title>Julia Diggs Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+   <!-- <link rel="stylesheet" href="mobile.css"> <!-- remember to change for the actual stylesheet-->
 </head>
 <body>
-<!--Header section-->
-    <header>
-        <h1>Julia Diggs</h1>
-        <p>Hi, my name is Julia Diggs and I'm a senior at the College of Charleston. I will be
-        graduating the College in the Spring with a degree in Computing in the Arts(BA) with a
-        concentration in Digital Media, and a minor in Studio Art. I'm interested in Graphic Design
-        and Animation Design.</p>
-
 <!--Nav Section-->
-    <div class="nav">
-        <nav>
+   <!-- <div class="nav">-->
+        <!--<nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="csci215.html">CSCI 215: Web Programming</a></li>
                 <li><a href="csci220.html">CSCI 220: Computer Programming 1</a></li>
                 <li><a href="csci221.html">CSCI 221: Computer Programming 2</a></li>
             </ul>
-        </nav>
+        </nav>-->
+        <div class="nav">
+            <a class="button button-primary" href="#">Home</a>
+            <a class="button" href="csci215/csci215.html">CSCI 215: Web Programming</a>
+            <a class="button" href="csci220/csci220.html">CSCI 220: Computer Programming 1</a>
+            <a class="button" href="csci221/csci221.html">CSCI 221: Computer Programming 2</a>
+        </div>
 
+   <!-- </div> -->
+<!--Header section-->
+    <div class="header">
+        <h1>Julia Diggs</h1>
+        <p>Hi, my name is Julia Diggs and I'm a senior at the College of Charleston. I will be
+        graduating the College in the Spring with a degree in Computing in the Arts(BA) with a
+        concentration in Digital Media, and a minor in Studio Art. I'm interested in Graphic Design
+        and Animation Design.</p>
     </div>
-    </header>
-<!--Section???-->
-<section>
-    <p>At the College of Charleston, I'm a CITA major</p>
-</section>
 
 
+    <section>
+        <p>At the College of Charleston, I'm in the Computer Science department and Studio Art department. As stated previously,
+        I'm Computing the in Arts major with a concentration in Digital Media, and Studio Art minor. I am interested in
+        Photography, Animation, Graphic Design, and Web Design. With this major and minor, I am able to take a lot of classes
+        that I am interested in, and become a well-rounded student.</p>
+    </section>
 
-<!--Footer-->
-<footer>
-    <div class="container">
-        <div class="row">
-            <div class="columns">
-                <p><a href="http://cofc.edu">CofC Homepage</a>
-                <a href="http://compsci.cofc.edu">CSCI Homepage</a>
-                Written by: <a href="mailto:diggsjm@g.cofc.edu">diggsjm@g.cofc.edu</a></p>
+    <br>
 
+    <!--Footer-->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="columns">
+                    <p><a class="button" href=http://cofc.edu">CofC Homepage</a>
+                    <a class="button" href="http://compsci.cofc.edu">CSCI Homepage</a>
+                    Written by: <a class="button" href="mailto:diggsjm@g.cofc.edu">diggsjm@g.cofc.edu</a></p>
+
+                </div>
             </div>
         </div>
-    </div>
-</footer>
+    </footer>
 
 </body>
 </html>
