--- a/csci215.html
+++ b/csci215.html
@@ -7,16 +7,18 @@
 </head>
 <body>
 <!--NAV BAR-->
-<div class="nav">
-    <a class="button button-primary" href="index.html">Home</a>
-    <a class="button" href="csci215/csci215.html">CSCI 215: Web Programming</a>
-    <a class="button" href="csci220/csci220.html">CSCI 220: Computer Programming 1</a>
-    <a class="button" href="csci221/csci221.html">CSCI 221: Computer Programming 2</a>
-</div>
+    <div class="section header">
+        <div class="nav">
+            <a class="button button-primary" href="index.html">Home</a>
+            <a class="button" href="csci215.html">CSCI 215: Web Programming</a>
+            <a class="button" href="csci220.html">CSCI 220: Computer Programming 1</a>
+            <a class="button" href="csci221.html">CSCI 221: Computer Programming 2</a>
+        </div>
 
-    <header>
-        <h1>Web Programming</h1>
-    </header>
+        <header>
+            <h1>Web Programming</h1>
+        </header>
+    </div>
 <!--    <p>In this class, we are taking the skills that we learned in CSCI 115: Web Design to enhance our
     abilies and skills with working in HTML and CSS. Unlike in Web Design, the focus of this class is
     to learn Javascript.</p>-->
@@ -25,7 +27,7 @@
         a Web page using the Document Object Model (DOM), create and validate forms and communicate with
         Web servers using current Web technologies.</p>
 
-    <h4>Syllabus</h4>
+    <!--<h4>Syllabus</h4>-->
 
 
     <h4>Prerequisite(s)</h4>
