--- a/csci220.html
+++ b/csci220.html
@@ -9,9 +9,9 @@
 <!--NAV BAR-->
 <div class="nav">
     <a class="button button-primary" href="index.html">Home</a>
-    <a class="button" href="csci215/csci215.html">CSCI 215: Web Programming</a>
-    <a class="button" href="csci220/csci220.html">CSCI 220: Computer Programming 1</a>
-    <a class="button" href="csci221/csci221.html">CSCI 221: Computer Programming 2</a>
+    <a class="button" href="csci215.html">CSCI 215: Web Programming</a>
+    <a class="button" href="csci220.html">CSCI 220: Computer Programming 1</a>
+    <a class="button" href="csci221.html">CSCI 221: Computer Programming 2</a>
 </div>
 
     <header>
