--- a/csci221.html
+++ b/csci221.html
@@ -7,17 +7,18 @@
 </head>
 <body>
 <!--NAV BAR-->
-<div class="nav">
-    <a class="button button-primary" href="index.html">Home</a>
-    <a class="button" href="csci215/csci215.html">CSCI 215: Web Programming</a>
-    <a class="button" href="csci220/csci220.html">CSCI 220: Computer Programming 1</a>
-    <a class="button" href="csci221/csci221.html">CSCI 221: Computer Programming 2</a>
-</div>
+    <div class="section header">
+        <div class="nav">
+            <a class="button button-primary" href="index.html">Home</a>
+            <a class="button" href="csci215.html">CSCI 215: Web Programming</a>
+            <a class="button" href="csci220.html">CSCI 220: Computer Programming 1</a>
+            <a class="button" href="csci221.html">CSCI 221: Computer Programming 2</a>
+        </div>
 
-    <header>
-        <h1>Computer Programming 2</h1>
-    </header>
-
+        <header>
+            <h1>Computer Programming 2</h1>
+        </header>
+    </div>
     <p>This course further develops object-oriented programming introduced in CSCI 220. Topics include file input/output,
         inheritance and polymorphism, exceptions, error handling and algorithm analysis. Lectures three hours per week.</p>
 
