--- a/index.html
+++ b/index.html
@@ -17,22 +17,24 @@
                 <li><a href="csci221.html">CSCI 221: Computer Programming 2</a></li>
             </ul>
         </nav>-->
+    <div class="section header">
+
         <div class="nav">
-            <a class="button button-primary" href="#">Home</a>
-            <a class="button" href="csci215/csci215.html">CSCI 215: Web Programming</a>
-            <a class="button" href="csci220/csci220.html">CSCI 220: Computer Programming 1</a>
-            <a class="button" href="csci221/csci221.html">CSCI 221: Computer Programming 2</a>
+            <a class="button button-primary" href="index.html">Home</a>
+            <a class="button" href="csci215.html">CSCI 215: Web Programming</a>
+            <a class="button" href="csci220.html">CSCI 220: Computer Programming 1</a>
+            <a class="button" href="csci221.html">CSCI 221: Computer Programming 2</a>
         </div>
 
-   <!-- </div> -->
-<!--Header section-->
-    <div class="header">
-        <h1>Julia Diggs</h1>
-        <p>Hi, my name is Julia Diggs and I'm a senior at the College of Charleston. I will be
-        graduating the College in the Spring with a degree in Computing in the Arts(BA) with a
-        concentration in Digital Media, and a minor in Studio Art. I'm interested in Graphic Design
-        and Animation Design.</p>
-    </div>
+       <!-- </div> -->
+    <!--Header section-->
+        <div class="header">
+            <h1>Julia Diggs</h1>
+            <p>Hi, my name is Julia Diggs and I'm a senior at the College of Charleston. I will be
+            graduating the College in the Spring with a degree in Computing in the Arts(BA) with a
+            concentration in Digital Media, and a minor in Studio Art. I'm interested in Graphic Design
+            and Animation Design.</p>
+        </div>
 
 
     <section>
